src/public/assets/stylesheets/main.css
/*
Code by Constructions Incongrues www.constructions-incongrues.net/.p
Code licensed under the  GNU AGPLv3:
http://www.gnu.org/licenses/gpl.txt
Version: 1.0 
*/


@import url(http://fonts.googleapis.com/css?family=Metrophobic);

html { font-size:62.5%;}
body {background-color: #FFF9FF;background-image: url(../img/pattern.gif); background-repeat: repeat; background-attachment: fixed; font-family: 'Metrophobic', sans-serif; }
header {margin-bottom:20px;}

/* ====== Text treatments ====== */

.grid-40 span {background-color:#000;color:#FFF;padding:4px;display:inline-block;position: relative;left:45px;font-size: 12px;font-size: 1.2rem;font-weight: bold;text-transform: uppercase;}
.description {font-size: 13px;font-size: 1.3rem;}
.description img {margin:30px 0 20px 0;}
.description p {text-align: center}
.grid-60 p:nth-child(2) {position: relative;top:20px;left:18px;font-weight: bold;text-transform: uppercase;;background-color: #00CCFF;padding:4px;font-size: 16px;font-size: 1.6rem;	}
.grid-60 p:nth-child(4){display:inline;position: relative;top:25px;left:0px;font-weight: bold;text-transform: uppercase;;background-color: #73E3FF;padding:4px;font-size: 13px;font-size: 1.3rem;	}

.nav p {text-align: right;position: relative;right: -15px;}
::selection {
	background: #000; /* Safari */
	color:#FFF;}
.jingle-about {font-size: 14px;font-size: 1.4rem;position: relative;left: 18px;top: 20px;padding-bottom: 10px}
/* links */


li a {text-decoration: none;color:#000;background-color: #e6faff;padding: 1px;position:relative;top:-5px;border-bottom: 1px solid #00CCFF;}
ol a, ol li span,.description a {font-weight: bold;background-color: transparent;border-bottom: none;top:0;}
footer p:first-child a {background-color: #000;color:#FFF;padding:4px;text-transform: uppercase;font-size:12px;font-size: 1.2rem; }
footer p:first-child a:hover {font-weight: normal;border-bottom: 2px solid #00CCFF}
footer a {text-decoration: none;color: #000;border-bottom: 1px solid #000;}
footer a:hover {text-transform: uppercase; }
li a:hover {border-bottom: 1px solid #e6faff;background-color: #00CCFF}
.download {display: inline-block;position:relative;top:-2px;}
.download a {text-decoration: none;color: #fff;font-weight: bold; margin-left: 1em; margin-right: 1em; text-transform: uppercase; }
.download a:hover {background-color: transparent; color: #00CCFF;}
ol li a:hover {border-bottom:1px solid #000;background-color: transparent;}
.description a {color: #000;text-decoration: none;}
.description a:hover {border-bottom: 1px solid #000;}
h1 a {color: #FFF;text-decoration: none;}
.nav p a {text-decoration: none;color:#000;font-weight: bold;;text-decoration: none;font-size: 14px;font-size: 1.4rem;text-transform: uppercase;margin:0 0 0 15px;}
.nav p a:hover {background-color: #000;color: #FFF;padding: 5px;}
.grid-60 p a {color: #000;text-decoration: none;}
h4 a {color:#000;text-decoration:none;text-transform: uppercase;font-weight: bold;background-color: #FCFE04;padding: 5px;}
h4 a:hover {color:#FFF;background-color: #000;}
.jingle-about a {color:#000;text-decoration: underline;}
/* ====== Heading ====== */

h1 {font-size:15px;font-size: 1.5rem; text-transform: uppercase;position:relative;top:-10px;left:10px;margin:-5px 0 30px 0;background-color: #000;padding: 4px;}
h2 {padding:4px;border-bottom:1px dotted #000;text-transform: uppercase;}
h2 {margin:0 0 30px 16px;font-size: 13px;font-size: 1.3rem; }
h3 {margin: 0 0 0 18px;font-size: 13px;font-size: 1.3rem;padding: 4px;text-transform: uppercase;}
h3 {display: block;position: relative;top: 20px;background-color: #000;color: #FFF;margin-bottom: 20px;}
.grid-60 h3 {display: inline;color: #FFF;position: relative;top:25px;}
h4 {font-size:15px;font-size: 1.5rem;display: inline;position: relative;top: 30px;left:-2px;color: #FFF;}

/* ----- list ----- */

li {margin:5px 0 5px 0;font-size: 15px; font-size: 1.5rem;text-transform: capitalize;}
ul{ list-style-image:url('../img/files_black.png');margin:30px 0 20px 0; } 
.nav ul, .nav li {display: inline;color:#000;padding: 2px;}
.nav li a {color:#000;border-bottom: 0px;}

/* **************** TEMPLATE ***************** */
/* ====== Page Head, Body, and Foot ====== */

footer {position:relative;left:8px;font-size: 14px;font-size: 1.4rem;}

header img {max-width: 100%; max-height: 100%;margin: 0 0 -10px -9px;}
audio {position:relative;left:18px;}

.description img {max-width:100%;max-height: 100%;}

/* **************** MEDIA PLAYER (http://mediaelementjs.com) ***************** */
.mejs-container { left: 20px; }
a.mejs-smartplaylist-time { font-family:"Helvetica"; font-size: 15px;font-weight: lighter;; font-size: 1.5rem;  color: #333; }
a.mejs-smartplaylist-time:after { content:"]"; }
a.mejs-smartplaylist-time:before { content:"["; }

a.mejs-smartplaylist-time.mejs-smartplaylist-current { background-color: #0cf; }
ol.mejs-smartplaylist-playlist { list-style-type: none; padding-left: 2em; }

